; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/tools/extr_pdfshow.c_showpages.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/tools/extr_pdfshow.c_showpages.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ctx = common dso_local global i32 0, align 4
@doc = common dso_local global i32 0, align 4
@out = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [18 x i8] c"page %d = %d 0 R\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @showpages to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @showpages() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = load i32, i32* @ctx, align 4
  %5 = load i32, i32* @doc, align 4
  %6 = call i32 @pdf_count_pages(i32 %4, i32 %5)
  store i32 %6, i32* %3, align 4
  store i32 0, i32* %2, align 4
  br label %7

7:                                                ; preds = %24, %0
  %8 = load i32, i32* %2, align 4
  %9 = load i32, i32* %3, align 4
  %10 = icmp slt i32 %8, %9
  br i1 %10, label %11, label %27

11:                                               ; preds = %7
  %12 = load i32, i32* @ctx, align 4
  %13 = load i32, i32* @doc, align 4
  %14 = load i32, i32* %2, align 4
  %15 = call i32* @pdf_lookup_page_obj(i32 %12, i32 %13, i32 %14)
  store i32* %15, i32** %1, align 8
  %16 = load i32, i32* @ctx, align 4
  %17 = load i32, i32* @out, align 4
  %18 = load i32, i32* %2, align 4
  %19 = add nsw i32 %18, 1
  %20 = load i32, i32* @ctx, align 4
  %21 = load i32*, i32** %1, align 8
  %22 = call i32 @pdf_to_num(i32 %20, i32* %21)
  %23 = call i32 @fz_write_printf(i32 %16, i32 %17, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0), i32 %19, i32 %22)
  br label %24

24:                                               ; preds = %11
  %25 = load i32, i32* %2, align 4
  %26 = add nsw i32 %25, 1
  store i32 %26, i32* %2, align 4
  br label %7

27:                                               ; preds = %7
  ret void
}

declare dso_local i32 @pdf_count_pages(i32, i32) #1

declare dso_local i32* @pdf_lookup_page_obj(i32, i32, i32) #1

declare dso_local i32 @fz_write_printf(i32, i32, i8*, i32, i32) #1

declare dso_local i32 @pdf_to_num(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
